Add GeneralScreen activity and integrate TodoManager for state management
- Implement GeneralScreen activity with navigation to ToDoActivity
- Create TodoManager for managing todos across activities
- Update ToDoActivity to utilize TodoManager for adding, updating, and deleting todos
- Enhance UI with new layout for GeneralScreen and update existing layouts

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ToDoAppUsingKotlinAndroid">
         <activity
+            android:name=".GeneralScreen"
+            android:exported="false" />
+        <activity
             android:name=".ToDoActivity"
             android:exported="false" />
         <activity
